--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,15 @@
 
   "require-dev": {
     "phpunit/phpunit": "^6.5",
-    "roave/security-advisories": "dev-master"
+    "roave/security-advisories": "dev-master",
+    "guzzlehttp/guzzle": "^6.3",
+    "symfony/http-foundation": "^4.0"
   },
 
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "psr/http-server-middleware": "^1.0",
+    "psr/http-message": "^1.0"
   },
 
   "suggest": {
