--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,12 @@
     }
   },
 
+  "autoload-dev": {
+    "psr-4": {
+      "mle86\\RequestAuthentication\\Tests\\": "test/"
+    }
+  },
+
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "roave/security-advisories": "dev-master",
@@ -34,5 +40,9 @@
   "suggest": {
     "symfony/http-foundation": "The library can process HttpFoundation's Request and Response interfaces.",
     "guzzlehttp/guzzle": "The library can be used as a GuzzleHttp middleware"
+  },
+
+  "scripts": {
+    "test": "vendor/bin/phpunit"
   }
 }
