--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,9 @@
 	<filter>
 		<whitelist>
 			<directory suffix=".php">./src/</directory>
+			<exclude>
+				<directory suffix=".php">./src/Exception/</directory>
+			</exclude>
 		</whitelist>
 	</filter>
 
