--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 language: php
-sudo: required
 
 php:
   - '7.1'
   - '7.2'
 
+addons:
+  apt:
+    sources:
+      - sourceline: 'ppa:ondrej/php'
+    packages:
+      - libsodium-dev
+
 before_install:
   - composer self-update
-  - sudo add-apt-repository -y ppa:ondrej/php
-  - sudo apt-get -qq update
-  - sudo apt-get install -y libsodium-dev
 
 install:
   - if [ "$(phpenv version-name)" = "7.1" ]; then
