--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "guzzlehttp/guzzle": "^6.3",
     "symfony/http-foundation": "^4.0",
     "paragonie/halite": "^4.4||^3.4",
-    "php-coveralls/php-coveralls": "^2.0"
+    "php-coveralls/php-coveralls": "^2.0",
+    "psr/simple-cache": "^1.0"
   },
 
   "require": {
