dep: require whitehat101/apr1-md5

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
   "require": {
     "php": ">=7.1",
     "psr/http-server-middleware": "^1.0",
-    "psr/http-message": "^1.0"
+    "psr/http-message": "^1.0",
+    "whitehat101/apr1-md5": "^1.0"
   },
 
   "suggest": {
