--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,6 @@
     "roave/security-advisories": "dev-master",
     "guzzlehttp/guzzle": "^6.3",
     "symfony/http-foundation": "^4.0",
-    "paragonie/halite": "^4.4||^3.4",
     "php-coveralls/php-coveralls": "^2.0",
     "psr/simple-cache": "^1.0"
   },
@@ -38,13 +37,13 @@
     "php": ">=7.1",
     "psr/http-server-middleware": "^1.0",
     "psr/http-message": "^1.0",
-    "whitehat101/apr1-md5": "^1.0"
+    "whitehat101/apr1-md5": "^1.0",
+    "paragonie/halite": "^4.4||^3.4"
   },
 
   "suggest": {
     "symfony/http-foundation": "The library can process HttpFoundation's Request and Response interfaces.",
-    "guzzlehttp/guzzle": "The library can be used as a GuzzleHttp middleware.",
-    "paragonie/halite": "The library includes the PublicKeyMethod class which uses the Halite library."
+    "guzzlehttp/guzzle": "The library can be used as a GuzzleHttp middleware."
   },
 
   "scripts": {
